# ModerationOVALOGICIEL

./: .gitignore  README.md
C2ServerAPI/: BuildExe.ps1  DISCORD_WEBHOOK_SETUP.md  Doxyfile  OVA.spec  PDYL9-K8Q5L-68WZM-FJRMW-WBGRH.txt  README.md  REASON_PRESETS_GUIDE.md  RegisterUnchainedServer.spec  Run.bat  __init__.py  a2sTest.py  getServersTest.py  interface.py  mainpage.md  pyproject.toml  resources_rc.py  test_dual_webhook.py  test_preset_gui.py  test_presets.py  versionmetadata.py
C2ServerAPI/core/: C2ServerAPIExample.py  a2s.py  guiServer.py  inputLib.py  inputLib_new.py  main.py  serverBrowser.py  serverRegister.py  wehbooks.py
